; ModuleID = '/home/carl/AnghaBench/git/extr_attr.c_read_attr_from_array.c'
source_filename = "/home/carl/AnghaBench/git/extr_attr.c_read_attr_from_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_stack = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"[builtin]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.attr_stack* (i8**)* @read_attr_from_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.attr_stack* @read_attr_from_array(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca %struct.attr_stack*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8** %0, i8*** %2, align 8
  store i32 0, i32* %5, align 4
  %6 = call %struct.attr_stack* @xcalloc(i32 1, i32 4)
  store %struct.attr_stack* %6, %struct.attr_stack** %3, align 8
  br label %7

7:                                                ; preds = %12, %1
  %8 = load i8**, i8*** %2, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i32 1
  store i8** %9, i8*** %2, align 8
  %10 = load i8*, i8** %8, align 8
  store i8* %10, i8** %4, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %7
  %13 = load %struct.attr_stack*, %struct.attr_stack** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %5, align 4
  %17 = call i32 @handle_attr_line(%struct.attr_stack* %13, i8* %14, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %16, i32 1)
  br label %7

18:                                               ; preds = %7
  %19 = load %struct.attr_stack*, %struct.attr_stack** %3, align 8
  ret %struct.attr_stack* %19
}

declare dso_local %struct.attr_stack* @xcalloc(i32, i32) #1

declare dso_local i32 @handle_attr_line(%struct.attr_stack*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
